<?xml version="1.0" encoding="utf-8" ?>
<!--
/**
 * Copyright (c) 2010, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ScrollView
            android:layout_height="0dip"
            android:layout_weight="1"
            android:layout_width="match_parent">
        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingLeft="14dip" android:paddingRight="14dip"
                android:paddingTop="6dip" android:paddingBottom="6dip">
            <TextView
                    android:id="@+id/message"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"/>
            <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_activity_username_label"/>
            <EditText
                    android:id="@+id/username_edit"
                    android:hint="@string/sign_in_username_field_hint"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"
                    android:capitalize="none"
                    android:autoText="false"
                    android:inputType="textEmailAddress"/>
            <TextView
                    android:id="@+id/username_fixed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:singleLine="true"
                    android:layout_marginTop="2dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:layout_marginTop="2dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_activity_password_label"/>
            <EditText
                    android:id="@+id/password_edit"
                    android:hint="@string/sign_in_password_field_hint"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"
                    android:capitalize="none"
                    android:autoText="false"
                    android:password="true"
                    android:inputType="textPassword"/>
            <TextView
                    android:id="@+id/message_bottom"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"/>

        </LinearLayout>
    </ScrollView>
    <RelativeLayout
            style="@style/ExecutionBar"
            android:gravity="right">
        <Button android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:textSize="20dip"
                android:padding="8dip"
                android:text="@string/login_activity_ok_button"
                android:onClick="handleLogin"/>
    </RelativeLayout>
</LinearLayout>
